--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 - pip install -e .
 - pip install -r tests/requirements.txt
 script:
-- flake8 --ignore=E501,F401 ./
+- flake8 --ignore=E501,F401,F403 ./
 deploy:
   provider: pypi
   user: rustybower
