--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,11 @@ addons:
     packages:
     - enchant
 install:
-- pip install -e .
-- pip install -r tests/requirements.txt
+  - pip install -e .
+  - pip install -r tests/requirements.txt
+  - pip install coveralls
 script:
-- flake8 --ignore=E501,F401,F403 ./
+  - flake8 --ignore=E501,F401,F403 ./
 deploy:
   provider: pypi
   user: rustybower
@@ -19,3 +20,5 @@ deploy:
     tags: true
     python: '3.5'
   skip_existing: true
+after_success:
+  - coveralls
