Commenting out coveralls until test suite is finished

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
   - pip install -r tests/requirements.txt
 script:
   - flake8 --ignore=E501,F401,F403 ./
-  - pytest --cov=./sopel_modules/
+  #- pytest --cov=./sopel_modules/
 deploy:
   provider: pypi
   user: rustybower
@@ -20,5 +20,5 @@ deploy:
     tags: true
     python: '3.5'
   skip_existing: true
-after_success:
-  - coveralls
+#after_success:
+  #- coveralls
