--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - pip install -e .
   - pip install -r tests/requirements.txt
 script:
-  - flake8 --ignore=E501,F401,F403 ./
+  - flake8 --ignore=E501,F401,F403,F811 ./
   - coverage run -m py.test -v .
   - coverage report
 after_success:
