--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,14 @@
 language: python
 python:
-- '2.7'
-- '3.5'
-- '3.6'
-addons:
-  apt:
-    packages:
-    - enchant
-install:
-  - pip install -e .
-  - pip install -r tests/requirements.txt
+  - '3.5'
+  - '3.6'
+  - '3.7'
+  - '3.8'
+before_install:
+  - pip install git+https://github.com/sopel-irc/sopel.git
+install: pip install -e .
 script:
-  - flake8 --ignore=E501,F401,F403,F811 ./
+  - pycodestyle --show-source --ignore=E501,E402,E722  ./
   - coverage run -m py.test -v .
   - coverage report
 after_success:
