--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ install:
   - pip install -r tests/requirements.txt
 script:
   - pycodestyle --show-source --ignore=E501,E402,E722  ./
-  - coverage run -m py.test -v .
-  - coverage report
+  #- coverage run -m py.test -v .
+  #- coverage report
 after_success:
   - coveralls
 deploy:
