--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
           python-version: ${{ matrix.python }} 
       - name: Install packages
         run: |
+          pip install -U setuptools
           pip install git+https://github.com/sopel-irc/sopel.git
           pip install -e .
           pip install -r tests/requirements.txt
