Convert plugin to entrypoint style; next release to be 'sopel-weather'
The old package name on PyPI can be updated with a shim directing users
to the new location for further updates.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,6 @@
 include NEWS
-include COPYING
-include README.md
-include *requirements.txt
+include README.rst
+include LICENSE
 
 recursive-include tests *
 recursive-exclude * __pycache__
